--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,10 @@
 # This is the main configuration file for the application.
 # ~~~~~
-application.name=myA
+application.name=ITMO SOCIAL
+
+# Blog engine configuration
+# ~~~~~
+blog.title=Student's profile
 
 # Application mode
 # ~~~~~
